# seattle-2025

./: .copier-answers.yml  .env.dockertest  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  justfile  manage.py  pyproject.toml
.github/workflows/: docker.yml
config/: __init__.py  asgi.py  middleware.py  settings.py  urls.py  wsgi.py
deploy/production/: .env.template  Caddyfile  compose.yml
deploy/production/pgbouncer/: pgbouncer.ini
deploy/proxy/: 502.html  50x.html
deploy/staging/: .env.template  Caddyfile  compose.yml
deploy/staging/pgbouncer/: pgbouncer.ini  userlist.txt.template
docker/: docker-compose.prod.yml  entrypoint.sh
scripts/: ensure_env.sh
seattle_2025/: asgi.py  settings.py  urls.py  wsgi.py
seattle_2025_app/: admin.py  apps  auth.py  convention.py  models.py  urls.py  views.py
seattle_2025_app/migrations/: 0001_initial.py  0002_controllperson_controll_person_perid_index_and_more.py
seattle_2025_app/static/css/: seattle-2025.css
seattle_2025_app/templates/bits/: convention_header.html  login_forms.html  site-header.html
seattle_2025_app/templates/hugopacket/bits/: welcome.html
seattle_2025_app/templates/nominate/bits/: nomination_instructions.html  voting_instructions.html
seattle_2025_app/templates/nominate/email/: nominations_for_user.html  nominations_for_user.txt
seattle_2025_app/templates/registration/: controll_login_failed.html
seattle_2025_app/tests/: test_auth.py  test_views.py
