
[project]
name = "seattle-2025"
version = "1.0.0"
description = "Convention app for Seattle Worldcon 2025"
authors = []
dependencies = [
    "granian>=1.6.3",
    "nomnom-hugoawards~=2025.0.0b6",
]
requires-python = "~=3.12.3"
readme = "README.md"
license = {text = "MIT"}

[tool.uv.sources]
nomnom-hugoawards = { path = "../nomnom", editable = true }

[tool.ruff.lint.isort]
known-first-party = ["", "seattle_2025_app"]

[tool.uv]
dev-dependencies = [
    "factory-boy~=3.3.0",
    "pytest~=8.3.3",
    "pytest-django~=4.9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
looponfailroots = ["config", "seattle_2025_app"]
django_find_project = false
filterwarnings = [
  # I know looponfailroots is 'deprecated' but ... i'm tired of seeing it
  "ignore::DeprecationWarning:xdist.plugin"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seattle_2025_app"]
